
syntax = "proto2";

message NodeStateMessage {
	required int32 status=1;	// 0 - dead, 1 - ready, 2 - alive but not ready
	required int32 node_id=2;
	required int32 rack_id=3;
	required int32 dc_id=4;
}

message GossipMessage {
	required NodeStateMessage node_state=1;
 	required VectorClockMessage vc=2;

//	optional int32 state=3;
}

message MembershipViewMessage {
 	repeated NodeStateMessage membership=1; 
 	required VectorClockMessage view_id=2;
}

message MembershipAgreementMessage {
	required int32 msg_type=1;		// 0 - PROPOSE, 1 - RESPONSE, 2 - NOTIFY, 3 - RETRY_LINK, 4 - NOTIFY_ACK
	required int32 ack_status=2;		// 0 - ACK, 1 - NACK, 2 - UNINIT
 	required MembershipViewMessage view=3; 
 	required VectorClockMessage vc=4;
}


message VectorClockMessage {
 	repeated int32 ids=1; 
 	repeated int64 counters=2; 
}
